# microTyper

./: CMakeLists.txt  LICENSE  README.md  calculate_llh.cpp  calculate_llh.h  calculate_llh_with_logSumExp.cpp  llrGenotyper.cpp  microTyper.cpp  microhap_dev.cpp  typedefs.h  utils.cpp  utils.h
example/: examplePositionFile.txt  examplePrior.txt  exampleReference.fasta  sample_0001.bam  sample_0002.bam  sample_0003.bam
src/: calculate_llh.cpp  calculate_llh.h  calculate_llh_with_logSumExp.cpp  countAlleleReads.cpp  countAlleleReads.h  count_matches.cpp  llrGenotyper.cpp  microTyper.cpp  microTyper_2.cpp  typedefs.h  utils.cpp  utils.h
